--- a/admin_panel/templates/category.html
+++ b/admin_panel/templates/category.html
@@ -122,11 +122,11 @@
         <tbody>
         <tr>
             <td class="center pull-right">
-            <a class="btn btn-danger" href="#">
+            <a class="btn btn-danger" href="/admin-panel/delete_cat?cat_id={{cat.0}}">
                 <i class="glyphicon glyphicon-trash icon-white"></i>
                 حذف
             </a>
-                <a class="btn btn-info" href="#">
+                <a class="btn btn-info" >
                 <i class="glyphicon glyphicon-edit icon-white"></i>
                     تغییر
             </a>
