--- a/admin_panel/templates/edit.html
+++ b/admin_panel/templates/edit.html
@@ -1,21 +1,6 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--
-        ===
-        This comment should NOT be removed.
-
-        Charisma v2.0.0
-
-        Copyright 2012-2014 Muhammad Usman
-        Licensed under the Apache License v2.0
-        http://www.apache.org/licenses/LICENSE-2.0
-
-        http://usman.it
-        http://twitter.com/halalit_usman
-        ===
-    -->
     <meta charset="utf-8">
     <title>
         EasyBot
@@ -92,22 +77,7 @@
                 <button type="button" class="btn btn-default"> صفحه اصلی</button>
             </div>
 
-            <!-- user dropdown ends -->
 
-            <!-- theme selector starts -->
-
-            <!-- theme selector ends -->
-
-            <ul class="collapse navbar-collapse nav navbar-nav  top-menu">
-
-
-                <li>
-                    <form class="navbar-search pull-left">
-                        <input style="text-align: right" placeholder="جستجو" class="search-query form-control col-md-10" name="query"
-                               type="text">
-                    </form>
-                </li>
-            </ul>
 
         </div>
     </div>
@@ -119,15 +89,6 @@
 
 
 
-
-        <noscript>
-            <div class="alert alert-block col-md-12">
-                <h4 class="alert-heading">Warning!</h4>
-
-                <p>You need to have <a href="http://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript</a>
-                    enabled to use this site.</p>
-            </div>
-        </noscript>
 
         <div id="content" class="col-lg-10 col-sm-10">
             <!-- content starts -->
@@ -169,7 +130,7 @@
                             <option value={{ cat.0 }} style="text-align: right">{{ cat.1 }}</option>
                             {% endfor %}
                         </select>
-
+{{ p_data }}
                         <div class="form-group" style="text-align: right">
                             <label for="num_form" class="col-2 col-form-label" style="margin-top: 5%;text-align: right;direction: rtl ; " >تعداد</label>
 
