--- a/admin_panel/templates/edit_cat.html
+++ b/admin_panel/templates/edit_cat.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -7,6 +7,7 @@
         EasyBot
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
     <!-- The styles -->
     <link id="bs-css" href="{% static 'adminpanel/css/bootstrap-cerulean.min.css' %}" rel="stylesheet">
 
@@ -48,6 +49,7 @@
         }
     </style>
 </head>
+
 <body>
     <!-- topbar starts -->
     <div class="navbar navbar-default" role="navigation">
@@ -59,7 +61,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
+            <a class="navbar-brand" href="index.html"> <img alt="logo" src="{% static 'adminpanel/img/logo20.png' %}" class="hidden-xs"/>
                 <span>EasyBot</span></a>
 
             <!-- user dropdown starts -->
@@ -69,85 +71,116 @@
                 <button type="button" class="btn btn-default"><a href="comments.html"> نظرات</a></button>
                 <button type="button" class="btn btn-default"><a href="category.html"> دسته بندی ها</a></button>
                 <button type="button" class="btn btn-default"><a href="enteghadat.html"> انتقادات پیشنهادات</a></button>
-                <button type="button" class="btn btn-primary"><a href="showing.html"> مشاهده کردن</a></button>
-                <button type="button" class="btn btn-default"><a href=adding.html"> افزودن </a></button>
-                <button type="button" class="btn btn-default"> صفحه اصلی</button>
+                <button type="button" class="btn btn-default" ><a href="showing.html"> مشاهده کردن</a></button>
+                
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  افزودن
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="adding.html">افزودن محصول</a>
+                  <a class="dropdown-item" href="adding_cat.html">افزودن دسته بندی</a>
+                  <a class="dropdown-item" href="adding_comment.html">افزودن نظر</a>
+
+                </div>
+                </div>
+            <div class="btn-group pull-right" style="float: right">
+            <button type="button" class="btn btn-default" style="float: right;"> صفحه اصلی</button>
+                </div>
+
             </div>
 
 
+
+        </div>
+
+
+
+
+<div class="ch-container">
+    <div class="row">
+
+        <div id="content" class="col-lg-10 col-sm-10">
+            <!-- content starts -->
+
+
+<div>
+    <ul class="breadcrumb col-md-offset-4 col-md-10 " style="text-align: right">
+        <li>
+            <a href="#">افزودن</a>
+
+        </li>
+        <li>
+            <a href="#">صفحه اصلی</a>
+        </li>
+    </ul>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+    <div class="container-fluid">
+
+    <div class="box  col-md-offset-7 col-md-7" >
+        <div class="box-inner">
+            <div class="box-header well" data-original-title="">
+                <h2 style="float: right"><i class="glyphicon glyphicon-star-empty"></i> افزودن دسته بندی</h2>
+
+
+            </div>
+            <div class="box-content">
+
+                <form role="form" action="/admin-panel/ed_cat" id="adding_cat" method="post" name="adding_cat_form">
+
+                    <div class="form-group" style="text-align: right">
+                        <label for="categoryname">نام دسته بندی</label>
+                        <input style="text-align: right" type="text" class="form-control" id="categoryname" name="new_cat" placeholder="" value="{{cat_data.1}}">
+                        <input hidden="hidden" name="cat_id" value="{{cat_data.0}}">
+                    </div>
+
+
+
+
+                    <button style="margin-left: 90% ; width: 10% ; font-size: medium" type="submit" class="btn btn-primary btn-round">تایید</button>
+                </form>
+            </div>
         </div>
     </div>
-    <!-- topbar ends -->
-<div class="container-fluid">
-<div class="row">
-<div class="box col-md-12 col-sm-3 ">
-<div class="box-inner">
-    <div class="box-header well" data-original-title="">
-        <h2 style="float:right">نظرات در یک نگاه</h2>
-        <div class="box-icon" style="float: left">
-            <a href="#" class="btn btn-minimize btn-round btn-default"><i
-                    class="glyphicon glyphicon-chevron-up"></i></a>
-            <a href="#" class="btn btn-close btn-round btn-default"><i class="glyphicon glyphicon-remove"></i></a>
     </div>
-    </div>
-    <div class="box-content">
-    <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
-        <thead>
-        <tr>
-            <th style="text-align: right"> تغییرات</th>
-            <th style="text-align: right">آی دی نظردهنده </th>
-            <th style="text-align: right"> دسته بندی</th>
-            <th style="text-align: right"> نظر</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
+        </div>
 
 
-        {% for comment in comments %}
-
-            <td style="text-align: right;" class="center ">
-                <div class="btn-group" role="group">
-
-                    <a href="/admin-panel/cm_del?cm_id={{comment.0}}">
-                        <button type="button" class="btn btn-danger btn-sm" style="float: right">
-
-                            <i class="glyphicon glyphicon-trash icon-white"></i>
-                            حذف
-
-                    </button>
-                    </a>
-                </div>
-
-            </td>
-                <td style="text-align: right;direction: rtl;"> {{comment.1}}</td>
-                <td style="text-align: right;direction: rtl;"> {{comment.3}}</td>
-                <td style="text-align: right;direction: rtl;"> {{comment.2}}</td>
+</div><!--/row-->
 
 
 
-
-        </tr>
-{% endfor %}
-
-        </tbody>
-
-    </table>
-
-    </div>
+    <!-- content ends -->
+    </div><!--/#content.col-md-0-->
+</div><!--/fluid-row-->
 
 
-</div>
-</div>
-</div>
-</div>
-
+    <hr>
 
 
 <footer class="row">
         <p style="text-align: center" class="col-md-offset-3 col-sm-offset-3col-md-6 col-sm-6 col-xs-12 copyright">&copy; <a href="#" target="_blank">طراحی شده توسط تیم بات گرام</a></p>
     </footer>
+
+
+
+<!-- external javascript --><!-- Latest compiled and minified CSS -->
+
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+
+<!-- (Optional) Latest compiled and minified JavaScript translation files -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+
+
+<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+
+
+
+
 
 </body>
 </html>
