--- a/admin_panel/templates/orders.html
+++ b/admin_panel/templates/orders.html
@@ -2,20 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--
-        ===
-        This comment should NOT be removed.
-
-        Charisma v2.0.0
-
-        Copyright 2012-2014 Muhammad Usman
-        Licensed under the Apache License v2.0
-        http://www.apache.org/licenses/LICENSE-2.0
-
-        http://usman.it
-        http://twitter.com/halalit_usman
-        ===
-    -->
     <meta charset="utf-8">
     <title>
         EasyBot
@@ -95,15 +81,7 @@
             <button type="button" class="btn btn-default"> صفحه اصلی</button>
         </div>
 
-        <!-- user dropdown ends -->
-
-        <!-- theme selector starts -->
-
-        <!-- theme selector ends -->
-
         <ul class="collapse navbar-collapse nav navbar-nav  top-menu">
-
-
             <li>
                 <form class="navbar-search pull-left">
                     <input style="text-align: right" placeholder="جستجو" class="search-query form-control col-md-10"
@@ -115,7 +93,6 @@
 
     </div>
 </div>
-<!-- topbar ends -->
 <div class="container-fluid">
     <div class="row">
         <div class="box col-md-12 col-sm-3 ">
@@ -135,6 +112,7 @@
                         <thead>
                         <tr>
                             <th style="text-align: right">چاپ فاکتور</th>
+                            <th style="text-align: right">ورود اطلاعات پیک ‌‌موتوری</th>
                             <th style="text-align: right">تایید دریافت محصول</th>
                             <th style="text-align: right">توضیحات سفارش</th>
                             <th style="text-align: right">مشاهده محصولات سفارشی</th>
@@ -153,6 +131,44 @@
 
                                 </div>
                             </td>
+
+                                <td>
+                                    <button data-toggle="modal" data-target="#showingmodal_enter_peyk{{ data.0  }}" type="button" class="btn btn-success btn-sm" style="float: right">
+ورود اطلاعات
+                                    </button>
+                                <div class="modal fade " id="showingmodal_enter_peyk{{ data.0 }}" tabindex="0" role="dialog" aria-labelledby="showingmodal_enter_peyk{{ data.0 }}" aria-hidden="true" style="padding-top: 9% ; ">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">ورود اطلاعات پیک موتوری</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" >
+          <div class="container">
+              <div class="row">
+                <form action="peyk_add" method="post">
+                  <div style="direction: rtl;text-align: right;" class="form-group">
+                    <p class="pull-right">ورود اطلاعات پیک موتوری</p>
+                      <input style="margin-bottom: 5%;" class="form-control pull-right" name="peyk_first_name" placeholder="نام پیک موتوری">
+                      <input style="margin-bottom: 5%;" class="form-control" name="peyk_last_name" placeholder="نام خانوادگی پیک موتوری">
+                      <input style="margin-bottom: 5%;" class="form-control" name="peyk_phone" placeholder="شماره تلفن پیک موتوری">
+                      <input hidden="hidden" name="order_id" value="{{data.0}}">
+                  </div>
+                  <button type="submit" class="btn btn-success pull-right">تایید</button>
+                </form>
+              </div>
+      </div>
+          </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">بستن</button>
+      </div>
+    </div>
+  </div>
+</div>
+                                </td>
+
 
                             <td style="text-align: right;direction: rtl" class="center ">
                                 <div class="btn-group" role="group">
@@ -174,6 +190,7 @@
 
                                 </div>
                             </td>
+
 
                             <td style="text-align: right;direction: rtl;">{{data.3}}<br><br><button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#showingmodal_edit{{ data.0  }}" style="float: right">
 ویرایش
