--- a/admin_panel/templates/orders.html
+++ b/admin_panel/templates/orders.html
@@ -18,6 +18,7 @@
     <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet'
           media='print'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="{% static 'adminpanel/bower_components/chosen/chosen.min.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
@@ -111,6 +112,7 @@
                     <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
                         <thead>
                         <tr>
+                            <th style="text-align: right">حذف</th>
                             <th style="text-align: right">چاپ فاکتور</th>
                             <th style="text-align: right">ورود اطلاعات پیک ‌‌موتوری</th>
                             <th style="text-align: right">تایید دریافت محصول</th>
@@ -123,6 +125,17 @@
                         <tbody>
                         <tr>
                             {% for data in orders_data %}
+                                <td style="text-align: right;direction: rtl" class="center ">
+                                <div class="btn-group" role="group">
+                                    <a href="del_order?orderid={{ data.0 }}">
+                                        <button type="button" class="btn btn-danger btn-sm" style="float: right">
+حذف
+                                    </button>
+                                    </a>
+
+                                </div>
+                            </td>
+
                             <td style="text-align: right;direction: rtl" class="center ">
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn btn-success btn-sm" style="float: right">
@@ -174,13 +187,20 @@
                                 <div class="btn-group" role="group">
 
                                         {% if data.5 == 0 %}
-                                    <a href="arrived?o_id={{data.0}}">
+                                    <a href="inpeyk?o_id={{data.0}}">
                                         <button type="button" class="btn btn-success btn-sm" style="float: right">
                                         <i class="glyphicon glyphicon-shopping-cart icon-white"></i>
                                     </button>
                                         </a>
                                         {% endif %}
-                                        {% if data.5 == 1 %}
+                                {% if data.5 == 1 %}
+                                    <a href="arrived?o_id={{data.0}}">
+                                        <button type="button" class="btn btn-success btn-sm" style="float: right">
+                                        <i class="fa fa-motorcycle" aria-hidden="true"></i>
+                                    </button>
+                                        </a>
+                                        {% endif %}
+                                        {% if data.5 == 2 %}
 
                                         <i style="font-size: 30px;text-align: center;" class="glyphicon glyphicon-send"></i>
 
