--- a/admin_panel/templates/show_survey.html
+++ b/admin_panel/templates/show_survey.html
@@ -125,6 +125,7 @@
     <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
         <thead>
         <tr>
+            <th style="text-align: right"> تغییرات</th>
             <th style="text-align: right">سوالات</th>
             <th style="text-align: right">موضوع</th>
             <th style="text-align: right">شماره</th>
@@ -136,13 +137,25 @@
 
 
             {% for data in survey_data %}
+                <td>
+                <div class="row">
+                 <a href="/admin-panel/del_survey?s_id={{data.0}}">
+                 <button type="button" class="btn btn-danger btn-sm" style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
+
+                            <i class="glyphicon glyphicon-trash icon-white"></i>
+                            حذف
+
+                    </button></a>
+                </div>
+
+            </td>
 
 
 
 
-                <td style="text-align: right;direction: rtl">{{data.3}}</td>
-                <td style="text-align: right;direction: rtl">{{data.0}}</td>
+                <td style="text-align: right;direction: rtl">{{data.4}}</td>
                 <td style="text-align: right;direction: rtl">{{data.1}}</td>
+                <td style="text-align: right;direction: rtl">{{data.2}}</td>
 
 
         </tr>
