--- a/admin_panel/templates/show_survey.html
+++ b/admin_panel/templates/show_survey.html
@@ -123,6 +123,7 @@
     </div>
     <div class="box-content">
     <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
+
         <thead>
         <tr>
             <th style="text-align: right"> تغییرات</th>
@@ -137,7 +138,68 @@
 
 
             {% for data in survey_data %}
-                <td>
+<td style=" width: 16%;" class="center ">
+  <div class="modal fade " id="surveymodal{{ data.0 }}" tabindex="0" role="dialog" aria-labelledby="surveymodal{{ data.0 }}" aria-hidden="true" style="padding-top: 9% ; ">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" style="width: 100%">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle" style="text-align:right ;  ">نمایش محصول</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body"  >
+          <div class="container">
+              <div class="row">
+                  <div class="col-md-9">
+                     <table class="table table-strpied table-bordered  responsive" style="width: 65%">
+            <thead>
+            <tr>
+
+                <th rowspan="3" style="text-align: right" > سوالات</th>
+
+
+            </tr>
+            </thead>
+
+            <tbody>
+
+
+            {%  for question in data.4 %}
+            <tr>
+
+
+                <td>{{  question }}
+                <a href="/admin-panel/del_survey?q_id={{ data.0 }}">
+                    <button type="button" class="btn btn-danger btn-sm" style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
+
+                            <i class="glyphicon glyphicon-trash icon-white"></i>
+                            حذف
+
+                    </button></a>
+
+</td>
+            </tr>
+            {%  endfor %}
+
+
+
+            </tbody>
+
+
+        </table>
+                      </div>
+                  </div>
+      </div>
+          </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"> بستن</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
                 <div class="row">
                  <a href="/admin-panel/del_survey?s_id={{data.0}}">
                  <button type="button" class="btn btn-danger btn-sm" style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small">
@@ -153,12 +215,21 @@
 
 
 
-                <td style="text-align: right;direction: rtl">{{data.4}}</td>
+                <td>
+                    <div class="row">
+
+                 <button  type="button" class="btn btn-success btn-sm"  style="float: right;border-radius: 10%;margin-right: 5%;font-size: x-small" data-toggle="modal" data-target="#surveymodal{{ data.0  }}">
+
+                            <i class="glyphicon glyphicon-zoom-in icon-white"></i>نمایش
+                    </button></a>
+                </div></td>
                 <td style="text-align: right;direction: rtl">{{data.1}}</td>
                 <td style="text-align: right;direction: rtl">{{data.2}}</td>
 
 
         </tr>
+
+
 
         {% endfor %}
 
@@ -174,6 +245,7 @@
 </div>
 </div>
 </div>
+
 
 
 
